# InfoTransform

./: .dockerignore  .env.bak  .env.example  .env.logging.example  .gitattributes  .gitignore  API_SPECIFICATION_FOR_UI.md  CLAUDE.md  CONFIG.md  Dockerfile  Dockerfile.dev  FASTAPI_MIGRATION.md  INTEGRATION_SUMMARY.md  MIGRATION_COMPLETE.md  README-DOCKER.md  README.md  WINDOWS_TROUBLESHOOTING.md  app.py  app_fastapi.py  config.py  config.yaml  demo.py  dev.bat  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint-prod.sh  docker-entrypoint.sh  info_transformer-licenses.csv  package.json  pyproject.toml  setup.bat  stream_content_compliance.py  tailwind.config.js  test_docx_single.py  test_file_types.py  test_markdown_streaming.py  test_ocr_example.py  test_setup.py  (+4 more)
.devcontainer/: README.md  devcontainer.json  docker-compose.yml
backend/: pytest.ini  test_pdf_detection.py
certs/: .gitignore  README.md
config/: .env.example  __init__.py  analysis_schemas.py  caching.yaml  config.development.yaml  config.production.yaml  config.staging.yaml  config.yaml  document_schemas.py  logging_config.yaml  performance.yaml
docs/: ASYNC_PROCESSING_SPEC.md  BATCH_PROCESSOR_REFACTOR.md  CONFIG_CLEANUP_SUMMARY.md  DOCKER_GUIDE.md  ENV_CONFIG_GUIDE.md  FILE_CLEANUP_FIX.md  IMPLEMENTATION_EXAMPLE.md  LOGGING_GUIDE.md  MULTI_RECORD_REVIEW_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_TUNING.md  QUICK_WINS_GUIDE.md  README.md  ROADMAP.md  STREAMING_IMPROVEMENTS_SUMMARY.md  STREAMING_PERFORMANCE_IMPROVEMENTS.md  (+3 more)
(+224 files in other folders)
