[project]
name = "markitdown-mvp"
version = "0.1.0"
description = "MVP for OCR and Speech-to-Text using Markitdown with OpenAI-compatible APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markitdown[all]>=0.1.2",
    "openai>=1.0.0",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.2",
]
